R-spatstat.univar: Autospec creation for update from version 3.0.0 to version 3.0.1

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+        CHANGES IN spatstat.univar VERSION 3.0-1
+
+OVERVIEW
+
+    o quantiles using linear approximation.
+
+    o extract the knots of a weighted CDF
+
+NEW FUNCTIONS
+
+    o knots.ewcdf
+    Method for generic 'knots' for extracting the jump points of a weighted
+    cumulative distribution function (object of class 'ewcdf').
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o quantile.ecdf, quantile.ewcdf
+    Now supports type=4 (linear interpolation).
+
+    o quantilefun.ecdf, quantilefun.ewcdf
+    Now supports type=4 (linear interpolation).
+
+
         CHANGES IN spatstat.univar VERSION 3.0-0
 
 OVERVIEW
