R-spatstat.univar: Autospec creation for update from version 3.0.1 to version 3.1.1

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,37 @@
+        CHANGES IN spatstat.univar VERSION 3.1-1
+
+OVERVIEW
+
+    o Internal changes to satisfy package checker.
+
+
+        CHANGES IN spatstat.univar VERSION 3.1-0
+
+OVERVIEW
+
+    o Boundary-corrected kernel density estimation on the positive half-line.
+    
+    o Bandwidth selection by non-random bootstrap.
+
+    o Minor improvements to documentation.
+
+NEW FUNCTIONS
+
+    o bw.taylor
+    Bandwidth selection for kernel density estimation
+    using Taylor's non-random bootstrap 
+
+    o densityBC
+    An extension of density.default that includes boundary corrections
+    for truncation of the density to the positive half line.
+
+    o densityAdaptiveKernel.default
+    Variable-bandwidth kernel density estimation,
+    with optional boundary correction. 
+
+    o dkernelBC
+    Evaluate the boundary corrected kernel
+
         CHANGES IN spatstat.univar VERSION 3.0-1
 
 OVERVIEW
