--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+        CHANGES IN spatstat.univar VERSION 3.1-2
+
+OVERVIEW
+
+    o Improvements to documentation.
+    
+    o Internal improvements.
+
         CHANGES IN spatstat.univar VERSION 3.1-1
 
 OVERVIEW
