--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+        CHANGES IN spatstat.univar VERSION 3.1-4
+
+OVERVIEW
+
+    o Extension to weighted median and weighted quantiles.
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o weighted.median, weighted.quantile
+    New option: type = 3.
+    Default changed to 'collapse=FALSE'.
+    Documentation corrected and improved.
+
+    o weighted.median, weighted.quantile, weighted.var
+    If 'w' is missing or NULL, the default weights are all equal to 1.
+
         CHANGES IN spatstat.univar VERSION 3.1-3
 
 OVERVIEW
